Send and Receive Data in Background Thread Using Stream
- Send and receive data in background thread using stream
- use HttpURLConnection rather thanHttpClient
- Handle the cancel of Progress dialog and Change Location Dialog
- Apply to new metadata target format and metadate format as last commit